# rapfi

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AUTHORS  Copying.txt  Readme.md
.github/workflows/: rapfi.yml  testing.yml  tuning.yml
Rapfi/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  config.cpp  config.h  internalConfig.cpp  main.cpp
Rapfi/command/: argutils.cpp  argutils.h  benchmark.cpp  command.cpp  command.h  database.cpp  dataprep.cpp  gomocup.cpp  opengen.cpp  selfplay.cpp  tuning.cpp
Rapfi/core/: compressor.cpp  compressor.h  filesystem.h  hash.cpp  hash.h  iohelper.cpp  iohelper.h  math.h  platform.cpp  platform.h  pos.h  random.h  string.h  time.h  types.h  utils.cpp  utils.h  version.cpp  version.h
Rapfi/database/: cache.h  dbclient.cpp  dbclient.h  dbstorage.h  dbtypes.cpp  dbtypes.h  dbutils.cpp  dbutils.h  yxdbstorage.cpp  yxdbstorage.h
Rapfi/emscripten/: preamble.js
Rapfi/eval/: crosscheck.h  eval.cpp  eval.h  evaluator.cpp  evaluator.h  mix10nnue.cpp  mix10nnue.h  mix6Qnnue.cpp  mix6Qnnue.h  mix6nnue.cpp  mix6nnue.h  mix7nnue.cpp  mix7nnue.h  mix8nnue.cpp  mix8nnue.h  mix9litennue.cpp  mix9litennue.h  mix9nnue.cpp  mix9nnue.h  mix9svqnnue.cpp  mix9svqnnue.h  nnuev2.cpp  nnuev2.h  onnxevaluator.cpp  onnxevaluator.h  simdops.h  weightloader.h
Rapfi/game/: bitboard.h  board.cpp  board.h  candarea.h  movegen.cpp  movegen.h  pattern.cpp  pattern.h  scopedmove.h  wincheck.h
Rapfi/search/: hashtable.cpp  hashtable.h  history.h  movepick.cpp  movepick.h  opening.cpp  opening.h  searchcommon.cpp  searchcommon.h  searcher.h  searchoutput.cpp  searchoutput.h  searchthread.cpp  searchthread.h  skill.h  timecontrol.cpp  timecontrol.h
Rapfi/search/ab/: history.cpp  history.h  parameter.h  search.cpp  searcher.h  searchstack.h
Rapfi/search/mcts/: node.cpp  node.h  nodetable.h  parameter.h  search.cpp  searcher.h
Rapfi/tuning/: dataentry.h  dataset.cpp  dataset.h  datawriter.cpp  datawriter.h  optimizer.cpp  optimizer.h  tunemap.h  tuner.cpp  tuner.h
